jar is named runtime.jar
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@862 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
@@ -1,6 +1,6 @@
 source.runtime.jar = src/,\
                      build/src/
-output.bin/BasicMTLruntime.jar = bin/
+output.bin/runtime.jar = bin/
 bin.includes = plugin.xml,\
                runtime.jar,\
                bin/,\
