BasicMTL.compiler plugin
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@863 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/build.properties
@@ -1,5 +1,5 @@
-source.runtime.jar = src/,\
-                     build/src/
+source.runtime.jar = src/java/,\
+                     build/src/java/
 output.bin/runtime.jar = bin/
 bin.includes = plugin.xml,\
                runtime.jar,\
