--- a/BasicMTL_projects/org.inria.BasicMTL.runtime/.classpath
+++ b/BasicMTL_projects/org.inria.BasicMTL.runtime/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="build/src/java"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/log4j/log4j.jar"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/ModFact/v1_0_0/ANTLR4SimpleTRL.jar"/>
 	<classpathentry exported="true" kind="lib" path="ThirdParty/JUnit/junit.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="build/src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ThirdParty/JMI/jmi.jar"/>
