BasicMTL.compiler plugin
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@864 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
@@ -1,5 +1,5 @@
-source.compiler.jar = src/,\
-                      build/src/
+source.compiler.jar = src/java/,\
+                      build/src/java/
 output.compiler.jar = bin/
 bin.includes = plugin.xml,\
                compiler.jar,\
