use latest directory organisation of the stantalone distribution
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@869 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/samples.SimpleUML_projects/SimpleUML/src/SimpleUMLTransformations/build.xml
+++ b/samples.SimpleUML_projects/SimpleUML/src/SimpleUMLTransformations/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2004-10-19 10:05:59 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.4 2004-10-26 10:00:42 dvojtise Exp $ -->
 <project name="SimpleUMLTransformations" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -19,7 +19,7 @@
 	
 	<path id="current.class.path">
 	  	<pathelement path="${MTLcompiler.Runtime}"/>
-		<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+		<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
 	</path>
 	  	
 	<!-- ************************************************ -->
@@ -89,7 +89,13 @@
 		<classpath>
 			<pathelement path="${builtbin}/"/>
 			<pathelement path="${MTLcompiler.Runtime}"/>
-			<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mof.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/nbmdr.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mdrapi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/openide-lookup.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmiutils.jar"/>
    			<pathelement path="${MTLcompiler.jar.path}/Thirdparty/log4j/log4j.jar"/>
 		</classpath>
        	</java> 
