--- a/BasicMTL_projects/CompilerTests/src/ForeachTests/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/ForeachTests/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2004-10-13 15:36:43 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.3 2004-10-26 09:57:33 dvojtise Exp $ -->
 <project name="acceptSamples" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -22,7 +22,7 @@
 	
 	<path id="current.class.path">
 	  	<pathelement path="${MTLcompiler.Runtime}"/>
-		<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+		<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
 	</path>
 	  	
 	<!-- ************************************************ -->
@@ -33,7 +33,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="Foreach"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/src/TLL/;${builtsrc}/TLL/;${MDRDriver.path}/src/ModelManager/TLL/;${builtsrc}/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/dist/Runtime/src/TLL/;${MDRDriver.path}/buid/TLL/;${builtsrc}/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/Foreach/"/>
 
 	<!-- ************************************************ -->
@@ -63,6 +63,7 @@
 
   		<!-- generate java files from the mtl files -->
 <!-- -->
+  		<echo message="${Sample Loaded TLL}"/>
   		<java jar="${ANTLR2JavaCode}" 
 					fork="true"
            			failonerror="true">
@@ -96,7 +97,13 @@
 		<classpath>
 			<pathelement path="${builtbin}/"/>
 			<pathelement path="${MTLcompiler.Runtime}"/>
-			<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mof.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/nbmdr.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mdrapi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/openide-lookup.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmiutils.jar"/>
   			<pathelement path="${MTLcompiler.jar.path}/Thirdparty/log4j/log4j.jar"/>
 		</classpath>
        	</java> 
