--- a/BasicMTL_projects/CompilerTests/src/Vehicules/TestVehicules/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/Vehicules/TestVehicules/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.4 2004-10-13 16:19:36 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.5 2004-10-26 09:57:35 dvojtise Exp $ -->
 <project name="TestVehicules" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -19,7 +19,7 @@
 	
 	<path id="current.class.path">
 	  	<pathelement path="${MTLcompiler.Runtime}"/>
-		<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+		<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
 	</path>
 	  	
 	<!-- ************************************************ -->
@@ -30,7 +30,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="testVehicules"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/Runtime/src/TLL/;${MDRDriver.path}/src/ModelManager/TLL/;${builtsrc}/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/Runtime/src/TLL/;${MDRDriver.path}/build/TLL/;${builtsrc}/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/testVehicules/"/>
 
 	<!-- ************************************************ -->
@@ -84,12 +84,19 @@
   	</target>
 
   	<target name="run TestVehicules" description="run the TestVehicules program">
+  		<echo message="${MDRDriver.path}"/>
 		<java classname="${Sample Package}.BMTLLib_${Sample Package}" fork="true" failonerror="yes">
 		<arg value="-h"/>
 		<classpath>
 			<pathelement path="${builtbin}/"/>
 			<pathelement path="${MTLcompiler.Runtime}"/>
-			<pathelement path="${MDRDriver.path}/dist/bin/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/lib/MDRDriver.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mof.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/nbmdr.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/mdrapi.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/openide-lookup.jar"/>
+			<pathelement path="${MDRDriver.path}/ThirdParty/MDR/official/jmiutils.jar"/>
    			<pathelement path="${MTLcompiler.jar.path}/Thirdparty/log4j/log4j.jar"/>
 		</classpath>
        	</java> 
