--- a/samples.SimpleUML_projects/SimpleUML.transformations/build.properties
+++ b/samples.SimpleUML_projects/SimpleUML.transformations/build.properties
@@ -3,7 +3,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.2 2004-08-16 11:46:22 dvojtise Exp $
+ * $Id: build.properties,v 1.3 2004-10-26 10:02:15 dvojtise Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -13,6 +13,6 @@ bin.includes = plugin.xml,\
                build/
 src.includes = src/,\
                build/
-source.SimpleUML_transformations.jar = build/src/,\
-                                       src/Java/
+source.SimpleUML_transformations.jar = src/Java/,\
+                                       build/src/java/
 output.SimpleUML_transformations.jar = bin/
