--- a/BasicMTL_projects/CompilerTests/src/MOFmodelVisitors/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/MOFmodelVisitors/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2004-10-26 09:57:36 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2004-10-27 15:11:25 dvojtise Exp $ -->
 <project name="MOFmodelVisitors" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -30,7 +30,7 @@
 	<!-- set sample properties for this build -->
 	<property name="Sample src Folder" value="${src}/"/>
 	<property name="Sample Package" value="MOFmodelVisitors"/>
-	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/dist/Runtime/src/TLL/;${MDRDriver.path}/buid/TLL/;${builtsrc}/TLL/"/>
+	<property name="Sample Loaded TLL" value="${MTLcompiler.path}/dist/Runtime/src/TLL/;${MDRDriver.path}/build/TLL/;${builtsrc}/TLL/"/>
 	<property name="Sample built src" value="${builtsrc}/MOFmodelVisitors/"/>
 
 	<!-- ************************************************ -->
