Removing unwanted env variables.
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@931 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/.classpath
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/.classpath
@@ -3,12 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="var" path="ECLIPSE_UI_WORKBENCH_TEXTEDITOR"/>
 	<classpathentry exported="true" kind="lib" path="MTL/bin/BasicMTLc.jar"/>
 	<classpathentry exported="true" kind="lib" path="MTL/bin/BasicMTLruntime.jar"/>
 	<classpathentry exported="true" kind="lib" path="MTL/bin/ThirdParty/ANTLR/antlrfull.jar"/>
-	<classpathentry exported="true" kind="var" path="ECLIPSE_JDT_LAUNCHING"/>
 	<classpathentry exported="true" kind="lib" path="MTL/bin/ThirdParty/log4j/log4j.jar"/>
-	<classpathentry exported="true" kind="var" path="ECLIPSE_DEBUG_CORE"/>
+	<classpathentry kind="lib" path="/BasicMtl2Java/LibAssociation/dist/bin/BasicMTLc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
