--- a/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
+++ b/BasicMTL_projects/org.inria.BasicMTL.compiler/build.properties
@@ -8,3 +8,5 @@ bin.includes = plugin.xml,\
                .project,\
                build/,\
                ThirdParty/
+jars.extra.classpath = ../org.inria.BasicMTL.runtime/ThirdParty/JUnit/junit.jar,\
+                       ../org.inria.BasicMTL.runtime/ThirdParty/log4j/log4j.jar
