added a project dependency to org.inria.BasicMTL.runtime plugin so it is easier to make eclipse compile (even if the build.xml file was ok)
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@936 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/MOF1.4_projects/MOF1.4/.classpath
+++ b/MOF1.4_projects/MOF1.4/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="build/src"/>
-    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="output" path="build/bin"/>
+	<classpathentry kind="src" path="build/src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/org.inria.BasicMTL.runtime"/>
+	<classpathentry kind="src" path="/MDRDriver"/>
+	<classpathentry kind="output" path="build/bin"/>
 </classpath>
