pre version of the Poseidon driver
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@937 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/PoseidonDriver/.classpath
+++ b/RepositoryDriver_projects/PoseidonDriver/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="build/src/java"/>
+	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="/MDRDriver"/>
 	<classpathentry kind="src" path="/MTDataTypes"/>
@@ -8,11 +9,7 @@
 	<classpathentry kind="src" path="/Utils"/>
 	<classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
 	<classpathentry kind="lib" path="/Utils/ThirdParty/JUnit/junit.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/jmi.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/jmiutils.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/mdrapi.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/mof.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/nbmdr.jar"/>
-	<classpathentry kind="lib" path="/MDRDriver/ThirdParty/MDR/official/openide-lookup.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poseidon_libs"/>
+	<classpathentry kind="src" path="/org.inria.BasicMTL.runtime"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
