--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/.classpath
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="MTL/bin/BasicMTLc.jar"/>
-	<classpathentry exported="true" kind="lib" path="MTL/bin/BasicMTLruntime.jar"/>
-	<classpathentry exported="true" kind="lib" path="MTL/bin/ThirdParty/ANTLR/antlrfull.jar"/>
-	<classpathentry exported="true" kind="lib" path="MTL/bin/ThirdParty/log4j/log4j.jar"/>
-	<classpathentry kind="lib" path="/BasicMtl2Java/LibAssociation/dist/bin/BasicMTLc.jar"/>
+	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="lib" path="MTL/bin/ThirdParty/log4j/log4j.jar"/>
+	<classpathentry kind="lib" path="MTL/bin/ThirdParty/ANTLR/antlrfull.jar"/>
+	<classpathentry kind="lib" path="MTL/bin/BasicMTLc.jar"/>
+	<classpathentry kind="lib" path="MTL/bin/BasicMTLruntime.jar"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
