added log4j.jar in the classpath so the site can correclty be built
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@944 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
+++ b/RepositoryDriver_projects/org.inria.EMFDriver/build.properties
@@ -5,3 +5,4 @@ rc/java/
 output.dist\EMFDriver.jar = bin/
 bin.includes = plugin.xml,\
                lib/EMFDriver.jar
+jars.extra.classpath = ../org.inria.BasicMTL.runtime/ThirdParty/log4j/log4j.jar
