--- a/UML1.4_projects/UML1.4/.classpath
+++ b/UML1.4_projects/UML1.4/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="build/src"/>
-    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="lib" path="/Utils/dist/bin/ThirdParty/log4j/log4j.jar"/>
-    <classpathentry kind="src" path="/BasicMtl2Java"/>
-    <classpathentry kind="lib"
-        path="/BasicMtl2Java/LibAssociation/dist/bin/BasicMTLruntime.jar" sourcepath="C:/eclipse_lievre/workspace/BasicMtl2Java/LibAssociation/src"/>
-    <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="build/src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Utils/dist/bin/ThirdParty/log4j/log4j.jar"/>
+	<classpathentry kind="src" path="/BasicMtl2Java"/>
+	<classpathentry kind="lib" path="/BasicMtl2Java/LibAssociation/bin"/>
+	<classpathentry kind="src" path="/MDRDriver"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
