--- a/RepositoryDriver_projects/MDRDriver/.classpath
+++ b/RepositoryDriver_projects/MDRDriver/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry excluding="**/CVS/*" kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/MTDataTypes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
